[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "binaryen.py"
version = "117.0.0-alpha.1"
description = "A Python wrapper for Binaryen"
authors = [{ name = "Jonathan Hargreaves", email = "jhargreaves189@gmail.com" }]
readme = "README.md"
keywords = ["WebAssembly", "Wasm", "Binaryen", "binaryen.py"]
classifiers = [
    "Environment :: MacOS X",
    "Environment :: WebAssembly",
    "Environment :: WebAssembly :: WASI",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Assembly",
    "Programming Language :: Python",
    "Topic :: Software Development :: Compilers",
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ['cffi >= 1.15.0']

[project.urls]
"Source Code" = "https://github.com/jonathanharg/binaryen.py"
Issues = "https://github.com/jonathanharg/binaryen.py/issues"
Changelog = "https://github.com/jonathanharg/binaryen.py/blob/main/CHANGELOG.md" 
"Original Source Code" = "https://github.com/WebAssembly/binaryen"

[project.optional-dependencies]
dev = ["black", "isort"]
